Некоторые измения в шаблонах писем (Не тестировал)

--- a/Email/change-email.eml.latte
+++ b/Email/change-email.eml.latte
@@ -46,17 +46,14 @@
                                             </th>
                                         </tr>
                                     </table>
-                                    
+
                                     <table class="row">
                                         <tr>
                                             <th class="small-12 large-12 columns first last">
                                                 <table class="row">
                                                     <tr>
                                                         <td>
-                                                            <center>
-                                                                <img src="pictures/lock.jpeg" align="center" class="float-center" width=128 height=128 />
-                                                            </center>
-                                                            
+
                                                             <table class="spacer">
                                                                 <tr>
                                                                     <td>
@@ -64,9 +61,9 @@
                                                                     </td>
                                                                 </tr>
                                                             </table>
-                                                            
+
                                                             <hr/>
-                                                            
+
                                                             <table class="spacer">
                                                                 <tr>
                                                                     <td>
@@ -74,11 +71,11 @@
                                                                     </td>
                                                                 </tr>
                                                             </table>
-                                                            
+
                                                             <p class="text-left">
                                                                 Здравствуйте, {$name}! Вы вероятно изменили свой адрес электронной почты в OpenVK. Чтобы изменение вступило в силу, необходимо подтвердить ваш новый Email.
                                                             </p>
-                                                            
+
                                                             <table class="spacer">
                                                                 <tr>
                                                                     <td>
@@ -86,7 +83,7 @@
                                                                     </td>
                                                                 </tr>
                                                             </table>
-                                                            
+
                                                             <table class="button large expand success">
                                                                 <tr>
                                                                     <td>
@@ -94,7 +91,7 @@
                                                                             <tr>
                                                                                 <td>
                                                                                     <center>
-                                                                                        <a href="http://{$_SERVER['HTTP_HOST']}/settings/change_email?key={rawurlencode($key)}" align="center" class="float-center">Подтвердить Email!</a>
+                                                                                        <a href="https://{$_SERVER['HTTP_HOST']}/settings/change_email?key={rawurlencode($key)}" align="center" class="float-center">Подтвердить Email!</a>
                                                                                     </center>
                                                                                 </td>
                                                                             </tr>
@@ -102,7 +99,7 @@
                                                                     </td>
                                                                 </tr>
                                                             </table>
-                                                            
+
                                                             <table class="spacer">
                                                                 <tr>
                                                                     <td>
@@ -110,30 +107,30 @@
                                                                     </td>
                                                                 </tr>
                                                             </table>
-                                                            
+
                                                             <p class="text-left">
                                                                 Если кнопка не работает, вы можете попробовать скопировать и вставить эту ссылку в адресную строку вашего веб-обозревателя:
                                                             </p>
-                                                            
+
                                                             <table class="callout">
                                                                 <tr>
                                                                     <th class="callout-inner primary">
-                                                                        <a href="http://{$_SERVER['HTTP_HOST']}/settings/change_email?key={$key}" style="color: #000; text-decoration: none;">
-                                                                            http://{$_SERVER['HTTP_HOST']}/settings/change_email?key={$key}
+                                                                        <a href="https://{$_SERVER['HTTP_HOST']}/settings/change_email?key={$key}" style="color: #000; text-decoration: none;">
+                                                                            https://{$_SERVER['HTTP_HOST']}/settings/change_email?key={$key}
                                                                         </a>
                                                                     </th>
                                                                 </tr>
                                                             </table>
-                                                            
+
                                                             <p class="text-left">
                                                                 Обратите внимание на то, что эту ссылку нельзя:
                                                             </p>
-                                                            
+
                                                             <ul>
-                                                                <li>Передавать другим людям (даже друзьям, питомцам, соседам, любимым девушкам)</li>
+                                                                <li>Передавать другим людям (даже друзьям, питомцам, соседям, любимым девушкам)</li>
                                                                 <li>Использовать, если прошло более двух дней с её генерации</li>
                                                             </ul>
-                                                            
+
                                                             <table class="callout">
                                                                 <tr>
                                                                     <th class="callout-inner alert">
@@ -144,7 +141,7 @@
                                                                     </th>
                                                                 </tr>
                                                             </table>
-                                                            
+
                                                             <table class="spacer">
                                                                 <tr>
                                                                     <td>
@@ -152,11 +149,11 @@
                                                                     </td>
                                                                 </tr>
                                                             </table>
-                                                            
+
                                                             <p class="text-right">
                                                                 С уважением, овк-тян.
                                                             </p>
-                                                            
+
                                                             <table class="spacer">
                                                                 <tr>
                                                                     <td>
@@ -164,9 +161,9 @@
                                                                     </td>
                                                                 </tr>
                                                             </table>
-                                                            
+
                                                             <hr/>
-                                                            
+
                                                             <table class="spacer">
                                                                 <tr>
                                                                     <td>
@@ -174,7 +171,7 @@
                                                                     </td>
                                                                 </tr>
                                                             </table>
-                                                            
+
                                                             <p class="text-left">
                                                                 <small>
                                                                     Вы получили это письмо так как кто-то или вы изменили адрес электронной почты. Это не рассылка и от неё нельзя отписаться. Если вы всё равно хотите перестать получать подобные письма, деактивируйте ваш аккаунт.
