--- a/Web/static/css/main.css
+++ b/Web/static/css/main.css
@@ -2068,18 +2068,15 @@ table td[width="120"] {
     font-weight: bold;
     margin-right: 10px;
     display: inline-block;
+    border-radius: 2px;
 }
 
 .mb_tab div {
-    padding: 3px 7px;
+    padding: 5px 9px;
 }
 
 .mb_tab#active {
     background-color: #898989;
-}
-
-.mb_tab#active div {
-    border: 2px solid #5f5f5f;
 }
 
 .mb_tab#active a {
