--- a/Web/Presenters/templates/@layout.xml
+++ b/Web/Presenters/templates/@layout.xml
@@ -238,9 +238,9 @@
 
                             <div class="floating_sidebar">
                                 <a id="minilink-friends" class="minilink" href="/friends{$thisUser->getId()}">
-                                    <object type="internal/link" n:if="$thisUser->getFollowersCount() > 0">
+                                    <object type="internal/link" n:if="$thisUser->getRequestsCount() > 0">
                                         <div class="counter">
-                                            +{$thisUser->getFollowersCount()}
+                                            +{$thisUser->getRequestsCount()}
                                         </div>
                                     </object>
                                     <img src="/assets/packages/static/openvk/img/friends.svg">
